file(GLOB icons_actions "${CMAKE_CURRENT_SOURCE_DIR}/*-actions-*.png")
ecm_install_icons(ICONS ${icons_actions} DESTINATION ${KDE_INSTALL_DATADIR}/ktechlab/icons)

install(FILES
	ammeter.png
	and.png
	assignment.png
	bidirled.png
	branch.png
	buffer.png
	bus.png
	capacitor.png
	cccs.png
	ccvs.png
	cell.png
	circuit.png
	clockinput.png
	current_source.png
	currentsignal.png
	delay.png
	diode.png
	dpdt.png
	dpst.png
	embed.png
	end.png
	external_connection.png
	external_link.png
	floatingprobe.png
	flowcode.png
	for.png
	ground.png
	ic1.png
	ic2.png
	ic3.png
	inductor.png
	interrupt.png
	item.png
	keypad.png
	led.png
	logic_input.png
	logic_output.png
	logicprobe.png
	matrixdisplay.png
	mechanics.png
	nand.png
	nemosfet.png
	njfet.png
	nor.png
	not.png
	npn.png
	opamp.png
	or.png
	pemosfet.png
	pinread.png
	pinwrite.png
	pjfet.png
	pnp.png
	portread.png
	portwrite.png
	potentiometer.png
	project_library.png
	project_program.png
	ptb.png
	ptm.png
	repeat.png
	resistor.png
	resistordip.png
	rotary.png
	seven_segment.png
	signal_lamp.png
	spdt.png
	spst.png
	start.png
	sub.png
	subcall.png
	unary.png
	variable_capacitor.png
	variable_resistor.png
	vccs.png
	vcvs.png
	voltage.png
	voltagesignal.png
	voltmeter.png
	while.png
	xnor.png
	xor.png
	
	DESTINATION ${KDE_INSTALL_DATADIR}/ktechlab/icons)
