
METASOURCES = AUTO
ktlicon_DATA = and.png cell.png logic_input.png logic_output.png nand.png \
				nor.png not.png or.png xor.png current_source.png ground.png voltage.png \
				capacitor.png led.png resistor.png signal_lamp.png seven_segment.png ammeter.png \
				diode.png npn.png pnp.png voltmeter.png dpdt.png dpst.png ptb.png ptm.png \
				spdt.png spst.png keypad.png opamp.png xnor.png circuit.png flowcode.png \
				delay.png interrupt.png pinread.png pinwrite.png portread.png portwrite.png \
				repeat.png while.png for.png assignment.png branch.png delay.png embed.png end.png \
				interrupt.png pinread.png pinwrite.png portread.png portwrite.png \
				repeat.png start.png sub.png subcall.png unary.png item.png ic1.png \
				ic2.png ic3.png voltagesignal.png currentsignal.png clockinput.png cccs.png \
				ccvs.png vcvs.png vccs.png mechanics.png buffer.png external_connection.png \
				logicprobe.png potentiometer.png resistordip.png bidirled.png project_library.png \
				project_program.png bus.png floatingprobe.png inductor.png matrixdisplay.png 		rotary.png \
		variable_capacitor.png variable_resistor.png external_link.png nemosfet.png njfet.png pemosfet.png pjfet.png \
		bar_graph_display.png
ktlicondir = $(kde_datadir)/ktechlab/icons
	

